Commit 2 - Alterei texto de chave e valor no Html

--- a/1.html
+++ b/1.html
@@ -8,8 +8,8 @@
     <table id="tabla">
       <thead>
         <tr>
-          <th>Clave</th>
-          <th>Valor</th>
+          <th>Clave de Rodrigo</th>
+          <th>Valor de Rodrigo</th>
         </tr>
       </thead>
       <tbody>
